--- a/requirements.txt
+++ b/requirements.txt
@@ -8,3 +8,13 @@ streamlit-folium>=0.7.0
 numpy>=1.22.0
 pytz>=2022.1
 geopy>=2.2.0
+pandas==2.1.0
+numpy==1.24.3
+pydeck==0.8.0
+matplotlib==3.7.2
+seaborn==0.12.2
+requests==2.31.0
+Pillow==10.0.0
+folium==0.14.0
+streamlit-folium==0.13.0
+branca==0.6.0
